--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h2>여기에 핸드폰의 아이디 정보가 표시될 것</h2>
     <button id="btn">아이디 정보 가져오기</button>
     <div id="result"></div>
+    <hr />
+    <div id="nfc_result"></div>
   </body>
 </html>
