--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script defer src="script.js"></script>
   </head>
   <body>
-    <h2>여기에 핸드폰의 아이디 정보가 표시될 것</h2>
+    <h2>NFC, 휴대폰 브라우저, 서버의 통신 구현</h2>
     <button id="btn">아이디 정보 가져오기</button>
     <div id="result"></div>
     <hr />
