--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
   </head>
   <body>
-    <h2>NFC, 휴대폰 브라우저, 서버의 통신 구현</h2>
-    <button id="btn">아이디 정보 가져오기</button>
-    <div id="result"></div>
-    <hr />
-    <div id="nfc_result"></div>
+    <div class="container">
+      <h2>NFC, 휴대폰 브라우저, 서버의 통신 구현</h2>
+      <button id="btn">아이디 정보 가져오기</button>
+      <div id="result"></div>
+      <hr />
+      <div id="nfc_result"></div>
+    </div>
   </body>
 </html>
