--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <h2>NFC, 휴대폰 브라우저, 서버의 통신 구현</h2>
+      <h2>NFC, 휴대폰 브라우저, 서버 통신 구현</h2>
       <button id="btn">아이디 정보 가져오기</button>
       <div id="result"></div>
       <hr />
