--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div class="container">
       <h2>NFC, 휴대폰 브라우저, 서버의 통신 구현</h2>
+      <h3>feature/server-cookie-id</h3>
       <button id="btn">아이디 정보 가져오기</button>
       <div id="result"></div>
       <hr />
